# OCR-data_Terremoto_Venezuela_24062026

./: README.md  consolidado.csv  consolidado.db  consolidado.md  consolidado.xlsx  consolidado_vec.db  pyproject.toml
20260625/Alcaldia_Chacao/: reporte_rescatados_chacao.md
20260625/Hosp_Domingo_Luciani/: CirugiaPediatrica.md  Listado_Domingo_Luciani.md  PersonasHeridas.md
20260625/Hosp_Perez_Carreño/: Lista_Niños_Hosp_Perez_Carreño.md  lista2.md
20260626/: Lista_heridos_consolidada.md
archivos/SISMO 2026 VZLA /: 1_5040023583598840087 (2).docx  Ingresos por sismo en Hospitales consolidado.docx  LISTAS DE PERSONAS EN MULTIPLES HOSPITALES.docx  Listado 2.docx
archivos/SISMO 2026 VZLA_1200/: Ingresos por sismo en hospital fredy Rodriguez_.docx
archivos/SISMO 2026 VZLA_1554/: LISTAS DE PERSONAS EN MULTIPLES HOSPITALES.docx  Listado 2.docx
archivos/SISMO 2026 VZLA_1554/LINK DE BUSQUEDA DE PERSONAS /: LINK BUSCA Y REGISTRA PERSONAS.docx
archivos/SISMO 2026 VZLA_202606261804/: LISTAS DE PERSONAS EN MULTIPLES HOSPITALES.docx  Listado 2.docx
archivos/SISMO 2026 VZLA_202606261804/LINK DE BUSQUEDA DE PERSONAS /: LINK BUSCA Y REGISTRA PERSONAS.docx
archivos/SISMO 2026 VZLA_20260627292400/: Sobrevivientes en hospitales. 26 Junio 12pm.xlsx  Terremoto Venezuela - Consolidado de personas de todos los archivos.xlsx
archivos/SISMO 2026 VZLA_20260627292400/01-LISTA DIGITALIZADA HOSPITALES/: LISTAS DE PERSONAS EN MULTIPLES HOSPITALES.docx  Listado 2.docx  (+2 more)
consolidado_app/: README.md  app.py  embedders.py  ingest.py  requirements.txt  search.py
(+122 files in other folders)
